--- a/wrestling_app/pubspec.yaml
+++ b/wrestling_app/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.5.2
+  firebase_core: ^3.11.0
+  firebase_auth: ^5.4.2
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
