--- a/wrestling_app/pubspec.yaml
+++ b/wrestling_app/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^3.11.0
   firebase_auth: ^5.4.2
   http: ^1.3.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
