--- a/wrestling_app/pubspec.yaml
+++ b/wrestling_app/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^5.4.2
   http: ^1.3.0
   intl: ^0.20.2
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
