--- a/wrestling_app/pubspec.yaml
+++ b/wrestling_app/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^1.3.0
   intl: ^0.20.2
   url_launcher: ^6.3.1
+  cloud_firestore: ^5.6.4
 
 dev_dependencies:
   flutter_test:
