--- a/wrestling_app/pubspec.yaml
+++ b/wrestling_app/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   intl: ^0.20.2
   url_launcher: ^6.3.1
   cloud_firestore: ^5.6.4
+  firebase_messaging: ^15.2.3
+  flutter_local_notifications: ^18.0.1
+  googleapis: ^13.2.0
+  googleapis_auth: ^1.6.0
 
 dev_dependencies:
   flutter_test:
