--- a/wrestling_app/pubspec.yaml
+++ b/wrestling_app/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   flutter_local_notifications: ^18.0.1
   googleapis: ^13.2.0
   googleapis_auth: ^1.6.0
+  google_maps_flutter: ^2.10.1
+  geolocator: ^13.0.2
+  geocoding: ^3.0.0
+  google_places_flutter: ^2.0.9
 
 dev_dependencies:
   flutter_test:
