--- a/wrestling_app/pubspec.yaml
+++ b/wrestling_app/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   geolocator: ^13.0.2
   geocoding: ^3.0.0
   google_places_flutter: ^2.0.9
+  qr_flutter: ^4.1.0
+  camera: ^0.11.1
+  qr_code_scanner_plus: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
