--- a/wrestling_app/pubspec.yaml
+++ b/wrestling_app/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   firebase_messaging: ^15.2.3
   flutter_local_notifications: ^19.0.0
   googleapis: ^14.0.0
-  googleapis_auth: ^1.6.0
+  googleapis_auth: ^2.0.0
   google_maps_flutter: ^2.10.1
   geolocator: ^13.0.2
   geocoding: ^3.0.0
@@ -55,10 +55,16 @@ dependencies:
   mockito: ^5.4.5
   build_runner: ^2.4.15
   mysql1: ^0.20.0
+  flutter_launcher_icons: ^0.14.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/wrestling_logo.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
