--- a/wrestling_app/pubspec.yaml
+++ b/wrestling_app/pubspec.yaml
@@ -46,18 +46,19 @@ dependencies:
   googleapis: ^14.0.0
   googleapis_auth: ^2.0.0
   google_maps_flutter: ^2.10.1
-  geolocator: ^13.0.2
+  geolocator: ^14.0.1
   geocoding: ^3.0.0
   google_places_flutter: ^2.0.9
   qr_flutter: ^4.1.0
   camera: ^0.11.1
   qr_code_scanner_plus: ^2.0.10+1
-  mockito: ^5.4.5
+  mockito: ^5.4.6
   build_runner: ^2.4.15
   mysql1: ^0.20.0
   flutter_launcher_icons: ^0.14.3
   file_picker: ^10.1.2
   dio: ^5.8.0+1
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
