--- a/wrestling_app/pubspec.yaml
+++ b/wrestling_app/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   googleapis_auth: ^2.0.0
   google_maps_flutter: ^2.10.1
   geolocator: ^14.0.1
-  geocoding: ^3.0.0
+  geocoding: ^4.0.0
   google_places_flutter: ^2.0.9
   qr_flutter: ^4.1.0
   camera: ^0.11.1
@@ -59,6 +59,7 @@ dependencies:
   file_picker: ^10.1.2
   dio: ^5.8.0+1
   google_fonts: ^6.2.1
+  fluttertoast: ^8.2.12
 
 dev_dependencies:
   flutter_test:
