--- a/wrestling_app/pubspec.yaml
+++ b/wrestling_app/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  test: ^1.25.15
 
 flutter_launcher_icons:
   android: "launcher_icon"
